--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,9 @@
+[B]1.2.0[/B]
+- Removed command queue as queuing commands doesn't make sense. Implement command handling in statemachine
+- Added UDP log to log and debug over the network
+- Implemented more robust button handling and debouncing
+- Debugged issues
+
 [B]1.1.0[/B]
 - Added OTA (via webinterface) software update.
 - Changed timers to freeRTOS timers.
