--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,11 @@
+[B]1.3.0[/B]
+- Fixed MQTT not reconnecting after disconnecting from broker.
+- Added MQTT auto discovery for home assistant.
+
+[B]1.2.2[/B]
+- Solved sign buf in integrator
+- Set command bit to prevent timed open on hotday
+
 [B]1.2.1[/B]
 - Added logging for lightsensor
 - Inverted digital lightsensor signal as it was interpreted incorrectly
