--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,6 @@
+[B]1.3.3[/B]
+- Changed home assistant device class to none for light as value is 0..1023 and not in lux
+
 [B]1.3.2[/B]
 - MQTT reconnect after network fail.
 
